# document-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt
document_parser/: __init__.py  usage_helpers.py
document_parser/core/: __init__.py  base_parser.py  models.py
document_parser/parsers/: __init__.py  excel_parser.py  image_parser.py  word_parser.py
document_parser/utils/: __init__.py  cell.py  helpers.py  metadata_patterns.py
